--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,6 +1,3 @@
-remove_file "Gemfile"
-
-file "Gemfile", <<-RUBY
 source 'https://rubygems.org'
 
 ruby '2.3.2'
@@ -42,7 +39,7 @@ group :development, :test do
 end
 
 group :development do
-  # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
+  # Access an IRB console on exception pages
   gem 'web-console'
   gem 'listen'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
@@ -52,4 +49,3 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
-RUBY
