--- a/example.env.tt
+++ b/example.env.tt
@@ -1,5 +1,7 @@
 # The purpose of this file is to keep secrets out of source control.
 # For more information, see: https://github.com/bkeepers/dotenv
 
-SIDEKIQ_WEB_USERNAME: admin
-SIDEKIQ_WEB_PASSWORD: password
+APP_URL: example.com
+
+RAILS_MAX_THREADS: 1
+WEB_CONCURRENCY: 1
