update default env variables

--- a/example.env.tt
+++ b/example.env.tt
@@ -1,7 +1,9 @@
 # The purpose of this file is to keep secrets out of source control.
 # For more information, see: https://github.com/bkeepers/dotenv
 
-APP_URL: example.com
+APP_URL: app.example.com
 
 RAILS_MAX_THREADS: 1
 WEB_CONCURRENCY: 1
+REDIS_URL: redis://localhost:6379/1
+PORT: 5000
