--- a/app.json.tt
+++ b/app.json.tt
@@ -5,6 +5,9 @@
     "postdeploy": "rake db:migrate; rake db:seed"
   },
   "env": {
+    "APP_URL": {
+      "required": true
+    },
     "LANG": {
       "required": true
     },
