break out partials into one template

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -38,6 +38,8 @@ group :development, :test do
   gem 'rspec-rails'
   # Access .env file before starting app
   gem 'dotenv-rails'
+  # Setup favicon icons
+  gem 'rails_real_favicon'
 end
 
 group :development do
