--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,10 +1,10 @@
-<h1><%%= plural_table_name.titleize %></h1>
+<h1><%= plural_table_name.titleize %></h1>
 
 <table class='table table-hover'>
   <thead>
     <tr>
-      <%- attributes.reject(&:password_digest?).each do |attribute| -%><th class="text-center"><%%= attribute.human_name %></th>
-      <%- end -%><th colspan="1"></th>
+      <% attributes.reject(&:password_digest?).each do |attribute| -%><th class="text-center"><%= attribute.human_name %></th>
+      <% end -%><th colspan="1"></th>
     </tr>
   </thead>
 
