updated partial relative links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,14 +34,14 @@
     <div class="page-header">
       <h1><%= yield :heading %></h1>
     </div>
-    <%= render 'layouts/flash' %>
+    <%= render 'flash' %>
     <%= yield %>
   </main>
 
   <footer>
     <hr/>
     <div class="container">
-      <%= render 'layouts/footer' %>
+      <%= render 'footer' %>
     </div>
   </footer>
 </body>
