--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -7,17 +7,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to root_url do %>
-        <!-- image_tag 'logo.png', class:'navbar-brand' -->
-      <% end %>
+       <!-- link_to root_url do
+        image_tag 'logo.png', class:'navbar-brand'
+       end -->
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-          <!-- <li>LOGGED IN NAVBAR VIEW</li> -->
-        <% else %>
-            <!-- <li>LOGGED OUT NAVBAR VIEW</li> -->
-        <% end %>
+         <!-- if user_signed_in?
+          <li>LOGGED IN NAVBAR VIEW</li>
+         else
+            <li>LOGGED OUT NAVBAR VIEW</li>
+         end -->
       </ul>
     </div>
   </div>
