--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-ruby '2.3.2'
+ruby '<%= RUBY_VERSION %>'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails'
 # Use postgresql as the database for Active Record
