rename variable for app domain

--- a/example.env.tt
+++ b/example.env.tt
@@ -1,7 +1,7 @@
 # The purpose of this file is to keep secrets out of source control.
 # For more information, see: https://github.com/bkeepers/dotenv
 
-APP_URL: app.example.com
+APP_DOMAIN: app.example.com
 
 RAILS_MAX_THREADS: 1
 WEB_CONCURRENCY: 1
