--- a/app.json.tt
+++ b/app.json.tt
@@ -5,7 +5,7 @@
     "postdeploy": "rake db:migrate; rake db:seed"
   },
   "env": {
-    "APP_URL": {
+    "APP_DOMAIN": {
       "required": true
     },
     "LANG": {
