update helpers and templates

--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= plural_table_name.titleize %></h1>
+<%% heading '<%= plural_table_name.titleize %>' %>
 
 <table class='table table-hover'>
   <thead>
