--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield :title %></title>
+  <title><%= if content_for?(:title) then yield(:title) end %></title>
   <%= render 'favicon' %>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="<%= yield :meta_description %>"/>
+  <meta name='description' content='<%= yield_meta_tag(:description, 'Default description') %>' />
 
   <%= action_cable_meta_tag %>
 
@@ -30,10 +30,13 @@
     <%= render 'navigation' %>
   </header>
 
-  <main role="main" class="container">
+  <% if content_for? :heading %>
     <div class="page-header">
       <h1><%= yield :heading %></h1>
     </div>
+  <% end %>
+
+  <main role="main" class="container">
     <%= render 'flash' %>
     <%= yield %>
   </main>
