--- a/example.env.tt
+++ b/example.env.tt
@@ -7,3 +7,5 @@ RAILS_MAX_THREADS: 1
 WEB_CONCURRENCY: 1
 REDIS_URL: redis://localhost:6379/1
 PORT: 5000
+
+SKYLIGHT_AUTHENTICATION: https://www.skylight.io/app/setup
