--- a/lib/templates/erb/scaffold/edit.html.erb
+++ b/lib/templates/erb/scaffold/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Editing <%= singular_table_name.titleize %></h1>
+<%% heading 'Update <%= singular_table_name.titleize %>' %>
 
 <%%= render 'form' %>
-
+<br>
 <%%= link_to 'Back to <%= plural_table_name.titleize %>', <%= index_helper %>_path, class:'btn btn-block btn-default' %>
 
 <%%= link_to @<%= singular_table_name %>, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-block btn-danger' do %>
